Added all submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/sazonovItas/nvim-config
+[submodule ".config/zsh/.oh-my-zsh"]
+	path = .config/zsh/.oh-my-zsh
+	url = git@github.com:ohmyzsh/ohmyzsh.git
+[submodule ".config/zsh/zsh-syntax-highlighting"]
+	path = .config/zsh/zsh-syntax-highlighting
+	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+[submodule ".config/zsh/Repos/zsh-autocomplete"]
+	path = .config/zsh/Repos/zsh-autocomplete
+	url = git@github.com:marlonrichert/zsh-autocomplete.git
+[submodule ".config/zsh/powerlevel10k"]
+	path = .config/zsh/powerlevel10k
+	url = git@github.com:romkatv/powerlevel10k.git
